--- a/Styles/style.css
+++ b/Styles/style.css
@@ -13,7 +13,6 @@
 html {
     scroll-behavior: smooth;
     font-size: 16px;
-    line-height: 16px;
     /*
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
